<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include android:id="@+id/tool_bar_include" layout="@layout/toolbar_layout" />

    <LinearLayout
        android:id="@+id/add_rss"
        android:layout_below="@id/tool_bar_include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_podcast"
            android:inputType="text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/add"/>
    </LinearLayout>

    <TextView
        android:layout_below="@id/add_rss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textSize="@dimen/activity_text_view_size_obs"
        android:text="@string/activity_add_podcast_obs"/>

</RelativeLayout>