<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <include android:id="@+id/tool_bar_include" layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/podcast_cover_width"
            android:layout_height="@dimen/podcast_cover_heigth"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/podquest_title"
            android:background="@drawable/pod_cast_245"/>

        <TextView
            android:id="@+id/episode_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/podquest_245" />
    </LinearLayout>

    <include layout="@layout/divider"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/podquest_245_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="@dimen/activity_text_view_size_obs"
                android:text="@string/activity_podcast_episode_obs"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>