<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar_include"
        layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/podcast_cover_width"
            android:layout_height="@dimen/podcast_cover_heigth"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:contentDescription="@string/podquest_title"
            android:background="@drawable/pod_cast_cover" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/podcast_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/podquest_title"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/podquest_description"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/divider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/episode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/podcast_play_bar"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/podcast_cover_mini_width"
                    android:layout_height="@dimen/podcast_cover_mini_height"
                    android:layout_margin="5dp"
                    android:background="@drawable/pod_cast_245"
                    android:contentDescription="@string/podquest_title" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/podquest_245"
                        android:textSize="18sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/button_play"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/play"
                    app:srcCompat="@drawable/ic_play_arrow_black_24dp"
                    tools:ignore="VectorDrawableCompat" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/podcast_playlist"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text="@string/activity_podcast_playlist_obs"
                android:textSize="@dimen/activity_text_view_size_obs" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>